[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Game/Damage/DamageLabel.gd" type="Script" id=1]
[ext_resource path="res://fonts/OpenSans/OpenSans-SemiBold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 60
outline_size = 1
outline_color = Color( 0.74902, 0.0901961, 0.0901961, 1 )
font_data = ExtResource( 2 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.857361
margin_top = 2.28931
margin_right = -0.857422
margin_bottom = 2.28931
mouse_filter = 1
script = ExtResource( 1 )

[node name="DamageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -34.5
margin_bottom = 34.5
custom_fonts/font = SubResource( 1 )
text = "1243484"
align = 1

[node name="HealLabel" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -34.5
margin_bottom = 34.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0156863, 0.556863, 0, 1 )
text = "1243484"
align = 1

[node name="CritDamageLabel" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -41.5
margin_bottom = 41.5
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.952941, 0.517647, 0.0509804, 1 )
text = "1243484"
align = 1
